--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0px;
     padding: 0px;
+    
+}
+
+body p{
     color: gray;
 }
 
 h1{
     color: blue;
     font-size: 52px;
+}
+
+h2{
+    font-size: 38px;
 }
 
 .big-text{
@@ -19,6 +27,7 @@ h1{
     background-image: url("images/backgrounds/header-bg.png");
     height: 750px;
     background-repeat: no-repeat;
+    background-position: center;
     padding:5%;
 }
 
@@ -28,13 +37,11 @@ h1{
     padding-top: 180px;
     padding-bottom: 100px;
     padding-left: 160px;
-    /* background-color: lightgreen; */
 }
 
 .hero-image{
     width: 45%;
     float: left;
-    /* background-color: lightpink; */
 }
 
 .banner-image{
@@ -43,30 +50,28 @@ h1{
 
 .click-button{
     text-decoration: none;
-    background-image: linear-gradient(180deg, blue,cyan);
-    padding: 10px 35px;
+    background-image: linear-gradient(90deg, blue,rgb(0, 140, 255));
+    padding: 10px 45px;
     border-radius: 5px;
+    font-weight: 700;
+    font-size: 18px;
+    color: white;
 }
-
 
 /* <!-- Biography section starts here --> */
 
 .biography-banner{
     background-image: url("images/backgrounds/biography-bg.png");
-    height: 700px;
+    height: 710px;
     background-repeat: no-repeat;
+    background-position: center;
     padding: 5%;
-
-
 }
 
 .biography-image{
     width: 45%;
     float: left;
-    /* background-color: lightgrey; */
-
 }
-
 
 .biography-content{
     width: 51%;
@@ -74,7 +79,6 @@ h1{
     padding-top: 200px;
     padding-bottom: 200px;
     padding-left: 50px;
-    /* background-color: lightgreen; */
 
 }
 
@@ -82,13 +86,91 @@ h1{
 
     <!-- Latest work section starts here --> */
 
-    .latest-work{
-        width: 30%;
-        height: 100px;
+.latest-work{
+     background-image: url("images/backgrounds/latest-work-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 1000px;
+    
+}
+.latest-work-sample{
+    width: 90%;
+    padding: 5%;
+}
 
-    }
+.one-third-width{
+    width: 28%;
+    height: 60px;
+    float: left;
+    padding: 2%;
 
-    .one-third-width{
-        /* width: 30%;
-        height: 100px; */
-    }
+}
+
+.one-third-width img{
+    width: 100%;
+}
+
+.latest-work-heading{
+    text-align: center;
+    padding-top: 80px;
+}
+
+.latest-work-heading p{
+    padding-bottom: 20px;
+}
+
+
+
+/* Client area starts here */
+
+.client-area{
+    background-image: url("images/backgrounds/footer-bg.png");
+    height: 1000px;
+    background-repeat: no-repeat;
+    text-align: center;
+    background-position: center;
+}
+
+.client-comment h2{
+    padding-top: 20px;
+    padding-bottom: 60px;
+
+}
+
+
+.client-comment p{
+    padding-bottom: 30px;
+}
+
+
+.half-width{
+    width: 48%;
+    padding: 1%;
+    float: left;
+}
+
+
+.contact-me{
+    background-image: linear-gradient(90deg, blue,rgb(0, 140, 255));
+    padding: 1%;
+    margin: 20%;
+    border-radius: 10px;
+    text-align: center;
+
+}
+
+.contact-me p{
+    color: white;
+}
+
+
+.contact-me h3{
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+}
+
+footer{
+    text-align: center;
+    padding-top: 10px;
+}
